update: 시트 출력 기능 리팩터링